# geodata-utils

./: .gitignore  README.md  pyproject.toml  setup.py
config/: config-template.yml  logging.yml
docs/: config.md  development.md  library-structure.md  manage-installation.md  manual-setup.md  update-index.md  update-solr.md
env/: .env-template  environment.yml
geodatautils/: __init__.py  config_tools.py  helpers.py  interfaces.py  logging_config.py  manage.py  schema.py  solr.py
geodatautils/config/: config-template.yml
geodatautils/config/schemas/: geoblacklight-schema-1.0-no_enum.json  geoblacklight-schema-1.0-wisc.json
install scripts/: create_python_env.bat  install.bat
